workspace_errors_12.txt
cargo :     Checking 
zero-ratchet v1.0.0 (C:
\Users\Revanth\Download
s\ZERO\zero-ratchet)
At line:1 char:1
+ cargo check 
--workspace --offline 
2>&1 | Out-File 
-FilePath workspace ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (    Checking    
 ze...O\zero-ratche    
t):String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
    Checking 
zero-handshake v1.0.0 (
C:\Users\Revanth\Downlo
ads\ZERO\zero-handshake
)
warning: field 
`config` is never read
  --> zero-relay\src\se
rver.rs:19:5
   |
18 | pub struct 
RelayServer {
   |            
----------- field in 
this struct
19 |     config: 
RelayConfig,
   |     ^^^^^^
   |
   = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: `zero-relay` 
(lib) generated 1 
warning
error[E0425]: cannot 
find type 
`HandshakeError` in 
this scope
  --> zero-handshake\sr
c\noise.rs:74:73
   |
74 |     fn 
encrypt_and_hash(&mut 
self, plaintext: 
&[u8]) -> 
Result<Vec<u8>, 
HandshakeError> {
   |                   
                       
                       
        ^^^^^^^^^^^^^^ 
not found in this scope
   |
help: consider 
importing this enum 
through its public 
re-export
   |
11 + use 
crate::HandshakeError;
   |

error[E0433]: failed 
to resolve: use of 
undeclared type 
`HandshakeError`
  --> zero-handshake\sr
c\noise.rs:79:30
   |
79 |                 
.map_err(|_| HandshakeE
rror::NoiseError("AEAD 
encrypt 
failed".into()))?;
   |                   
           
^^^^^^^^^^^^^^ use of 
undeclared type 
`HandshakeError`
   |
help: consider 
importing this enum 
through its public 
re-export
   |
11 + use 
crate::HandshakeError;
   |

error[E0425]: cannot 
find type 
`HandshakeError` in 
this scope
  --> zero-handshake\sr
c\noise.rs:89:74
   |
89 |     fn 
decrypt_and_hash(&mut 
self, ciphertext: 
&[u8]) -> 
Result<Vec<u8>, 
HandshakeError> {
   |                   
                       
                       
         
^^^^^^^^^^^^^^ not 
found in this scope
   |
help: consider 
importing this enum 
through its public 
re-export
   |
11 + use 
crate::HandshakeError;
   |

error[E0433]: failed 
to resolve: use of 
undeclared type 
`HandshakeError`
  --> zero-handshake\sr
c\noise.rs:94:30
   |
94 |                 
.map_err(|_| HandshakeE
rror::AuthenticationFai
led)?;
   |                   
           
^^^^^^^^^^^^^^ use of 
undeclared type 
`HandshakeError`
   |
help: consider 
importing this enum 
through its public 
re-export
   |
11 + use 
crate::HandshakeError;
   |

error[E0425]: cannot 
find type 
`HandshakeError` in 
this scope
   --> zero-handshake\s
rc\noise.rs:168:57
    |
168 |     pub fn 
write_message1(&mut 
self) -> 
Result<Vec<u8>, 
HandshakeError> {
    |                  
                       
                
^^^^^^^^^^^^^^ not 
found in this scope
    |
help: consider 
importing this enum 
through its public 
re-export
    |
 11 + use 
crate::HandshakeError;
    |

error[E0425]: cannot 
find type 
`HandshakeError` in 
this scope
   --> zero-handshake\s
rc\noise.rs:183:26
    |
183 |     ) -> 
Result<Vec<u8>, 
HandshakeError> {
    |                  
        ^^^^^^^^^^^^^^ 
not found in this scope
    |
help: consider 
importing this enum 
through its public 
re-export
    |
 11 + use 
crate::HandshakeError;
    |

error[E0433]: failed 
to resolve: use of 
undeclared type 
`HandshakeError`
   --> zero-handshake\s
rc\noise.rs:186:24
    |
186 |             
return Err(HandshakeErr
or::MessageLength { 
expected: 32, got: 
msg1.len() });
    |                  
      ^^^^^^^^^^^^^^ 
use of undeclared type 
`HandshakeError`
    |
help: consider 
importing this enum 
through its public 
re-export
    |
 11 + use 
crate::HandshakeError;
    |

error[E0425]: cannot 
find type 
`HandshakeError` in 
this scope
   --> zero-handshake\s
rc\noise.rs:222:26
    |
222 |     ) -> 
Result<Vec<u8>, 
HandshakeError> {
    |                  
        ^^^^^^^^^^^^^^ 
not found in this scope
    |
help: consider 
importing this enum 
through its public 
re-export
    |
 11 + use 
crate::HandshakeError;
    |

error[E0433]: failed 
to resolve: use of 
undeclared type 
`HandshakeError`
   --> zero-handshake\s
rc\noise.rs:227:41
    |
227 |         if 
msg2.len() < 32 { 
return Err(HandshakeErr
or::MessageLength { 
expected: 32, got: 
msg2.len() }); }
    |                  
                       
^^^^^^^^^^^^^^ use of 
undeclared type 
`HandshakeError`
    |
help: consider 
importing this enum 
through its public 
re-export
    |
 11 + use 
crate::HandshakeError;
    |

error[E0433]: failed 
to resolve: use of 
undeclared type 
`HandshakeError`
   --> zero-handshake\s
rc\noise.rs:241:54
    |
241 |         if 
msg2.len() < pos + 
rs_ct_len { return Err(
HandshakeError::Message
Length { expected: 
pos+rs_ct_len, got: 
msg2.len() }); }
    |                  
                       
             
^^^^^^^^^^^^^^ use of 
undeclared type 
`HandshakeError`
    |
help: consider 
importing this enum 
through its public 
re-export
    |
 11 + use 
crate::HandshakeError;
    |

error[E0425]: cannot 
find type 
`HandshakeError` in 
this scope
   --> zero-handshake\s
rc\noise.rs:270:69
    |
270 |     pub fn 
read_message3(&mut 
self, msg3: &[u8]) -> 
Result<Vec<u8>, 
HandshakeError> {
    |                  
                       
                       
     ^^^^^^^^^^^^^^ 
not found in this scope
    |
help: consider 
importing this enum 
through its public 
re-export
    |
 11 + use 
crate::HandshakeError;
    |

error[E0433]: failed 
to resolve: use of 
undeclared type 
`HandshakeError`
   --> zero-handshake\s
rc\noise.rs:277:48
    |
277 |         if 
msg3.len() < rs_ct_len 
{ return Err(HandshakeE
rror::MessageLength { 
expected: rs_ct_len, 
got: msg3.len() }); }
    |                  
                       
       ^^^^^^^^^^^^^^ 
use of undeclared type 
`HandshakeError`
    |
help: consider 
importing this enum 
through its public 
re-export
    |
 11 + use 
crate::HandshakeError;
    |

error[E0425]: cannot 
find type 
`HandshakeError` in 
this scope
   --> zero-handshake\s
rc\noise.rs:295:50
    |
295 |     pub fn 
finalize(self) -> 
Result<NoiseOutput, 
HandshakeError> {
    |                  
                       
         
^^^^^^^^^^^^^^ not 
found in this scope
    |
help: consider 
importing this enum 
through its public 
re-export
    |
 11 + use 
crate::HandshakeError;
    |

Some errors have 
detailed explanations: 
E0425, E0433.
For more information 
about an error, try 
`rustc --explain 
E0425`.
error: could not 
compile 
`zero-handshake` (lib) 
due to 13 previous 
errors
warning: build failed, 
waiting for other jobs 
to finish...
